objects/Activite_Soufflet__c.object
<CustomObject>
    <description>C&apos;est un objet qui va contenir l&apos;activité marché que le compte peut avoir</description>
    <fields>
        <fullName>Assureur__c</fullName>
        <label>Assureur</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Assureur</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientDataReferente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Refers to the Client Data flagged as &quot;Referent Management Sheet&quot; for the referent Account.</inlineHelpText>
        <label>Fiche Client Data Référente</label>
        <referenceTo>ClientData__c</referenceTo>
        <relationshipLabel>Activités Soufflet</relationshipLabel>
        <relationshipName>Activites_Soufflet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commercial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activites_Soufflet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compte__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cette activité Soufflet est relié a ce compte</description>
        <label>Compte</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activités Soufflet</relationshipLabel>
        <relationshipName>Activite_Soufflet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cycle_de_qualification__c</fullName>
        <label>Cycle de qualification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <default>true</default>
                    <label>Brouillon</label>
                </value>
                <value>
                    <fullName>60</fullName>
                    <label>Actif</label>
                </value>
                <value>
                    <fullName>80</fullName>
                    <label>Bloqué</label>
                </value>
                <value>
                    <fullName>99</fullName>
                    <label>Fermé</label>
                </value>
                <value>
                    <fullName>85</fullName>
                    <label>Interdit</label>
                </value>
                <value>
                    <fullName>90</fullName>
                    <label>Sans intérêt</label>
                </value>
                <value>
                    <fullName>95</fullName>
                    <label>Perdu commercialement</label>
                </value>
                <value>
                    <fullName>75</fullName>
                    <label>Inactif</label>
                </value>
                <value>
                    <fullName>65</fullName>
                    <label>En reconquête</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delai_de_paiement_CD__c</fullName>
        <label>Délai de paiement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delai_de_paiement_FA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delai_de_paiement__c</fullName>
        <label>Délai de paiement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>B0</fullName>
                    <label>0J DATE BL (BILL OF LADING)</label>
                </value>
                <value>
                    <fullName>009</fullName>
                    <label>105j date facture</label>
                </value>
                <value>
                    <fullName>CF3</fullName>
                    <label>10j Date de Facture</label>
                </value>
                <value>
                    <fullName>141</fullName>
                    <label>10j date livraison</label>
                </value>
                <value>
                    <fullName>001</fullName>
                    <label>10 jours date de facture</label>
                </value>
                <value>
                    <fullName>B4M</fullName>
                    <label>120J DATE BL (BILL OF LADING)</label>
                </value>
                <value>
                    <fullName>010</fullName>
                    <label>120 jours date de facture</label>
                </value>
                <value>
                    <fullName>B15</fullName>
                    <label>15J DATE BL (BILL OF LADING)</label>
                </value>
                <value>
                    <fullName>B-Q</fullName>
                    <label>-15J DATE BL (BILL OF LADING)</label>
                </value>
                <value>
                    <fullName>CFC</fullName>
                    <label>15j Date de Facture</label>
                </value>
                <value>
                    <fullName>CEK</fullName>
                    <label>15j date livraison.</label>
                </value>
                <value>
                    <fullName>102</fullName>
                    <label>15j FdM date fac</label>
                </value>
                <value>
                    <fullName>CFP</fullName>
                    <label>15j FDM Date facture</label>
                </value>
                <value>
                    <fullName>002</fullName>
                    <label>15 jours date de facture</label>
                </value>
                <value>
                    <fullName>015</fullName>
                    <label>15 jours date de livraison</label>
                </value>
                <value>
                    <fullName>180</fullName>
                    <label>180j Date de Facture</label>
                </value>
                <value>
                    <fullName>143</fullName>
                    <label>20j date livraison</label>
                </value>
                <value>
                    <fullName>CE1</fullName>
                    <label>20j Date Livraison/Enlèvement</label>
                </value>
                <value>
                    <fullName>003</fullName>
                    <label>20 jours date de facture</label>
                </value>
                <value>
                    <fullName>CFH</fullName>
                    <label>25j date facture</label>
                </value>
                <value>
                    <fullName>B30</fullName>
                    <label>30J DATE BL (BILL OF LADING)</label>
                </value>
                <value>
                    <fullName>CM1</fullName>
                    <isActive>false</isActive>
                    <label>30j Date de Connaissement</label>
                </value>
                <value>
                    <fullName>CF0</fullName>
                    <label>30j date facture</label>
                </value>
                <value>
                    <fullName>CG9</fullName>
                    <label>30j Date Facture le 25</label>
                </value>
                <value>
                    <fullName>CE2</fullName>
                    <label>30j Date Livraison/Enlèvement</label>
                </value>
                <value>
                    <fullName>CX2</fullName>
                    <label>30j Fdm Date Expédition</label>
                </value>
                <value>
                    <fullName>CFY</fullName>
                    <label>30j Fdm Date Livraison</label>
                </value>
                <value>
                    <fullName>230</fullName>
                    <label>30j Fdm dt Livraison</label>
                </value>
                <value>
                    <fullName>CE9</fullName>
                    <label>30j Fdm le 10 Date livraison</label>
                </value>
                <value>
                    <fullName>715</fullName>
                    <label>30j Fdm le 15 dt livraison</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <defaultValue>IF (Right($UserRole.DeveloperName,2) =&quot;AG&quot;, &quot;A&quot;, 
CASE( LEFT($UserRole.DeveloperName, 
           CASE(  FIND(&quot;_&quot;, $UserRole.DeveloperName, FIND(&quot;_&quot;, $UserRole.DeveloperName, 0)+1),
                  0, CASE(FIND(&quot;_&quot;, $UserRole.DeveloperName, 0), 0, LEN($UserRole.DeveloperName), FIND(&quot;_&quot;, $UserRole.DeveloperName, 0)-1),
                  FIND(&quot;_&quot;, $UserRole.DeveloperName, FIND(&quot;_&quot;, $UserRole.DeveloperName, 0)+1) ) ),
&quot;BVP_NH_&quot; , &quot;D&quot;,
&quot;BVP&quot; , &quot;D&quot;,
&quot;INGR_AIT_&quot; , &quot;I&quot;,
&quot;INGR&quot; , &quot;I&quot;,
&quot;INGR_BIO_&quot; , &quot;I&quot;,
&quot;MALT_MALTFR_&quot; , &quot;B&quot;,
&quot;MALT&quot; , &quot;B&quot;,
&quot;MEU_MS_&quot; , &quot;MF&quot;,
&quot;MEU&quot; , &quot;MF&quot;,
&quot;SALM_SALM29_&quot; , &quot;R&quot;,
&quot;SALM&quot; , &quot;R&quot;,
&quot;CERES&quot; , &quot;MB&quot;,
&quot;&quot;)
				)</defaultValue>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MF</fullName>
                    <label>Meunerie France</label>
                </value>
                <value>
                    <fullName>V</fullName>
                    <label>Vigne</label>
                </value>
                <value>
                    <fullName>A</fullName>
                    <label>Agriculture</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>Bioenergies</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>Carburants</label>
                </value>
                <value>
                    <fullName>H</fullName>
                    <label>Holding</label>
                </value>
                <value>
                    <fullName>I</fullName>
                    <label>Ingrédients</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>Malterie</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>Négoce</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <label>Neuhauser Industrie</label>
                </value>
                <value>
                    <fullName>L</fullName>
                    <label>Neuhauser Retail</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <label>Riz et légumes secs</label>
                </value>
                <value>
                    <fullName>MB</fullName>
                    <label>Meunerie Belge</label>
                </value>
                <value>
                    <fullName>T</fullName>
                    <isActive>false</isActive>
                    <label>Biotechnologies</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FicheDeGestionReferente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiche de gestion référente</label>
        <referenceTo>Adresse__c</referenceTo>
        <relationshipLabel>Activités Soufflet</relationshipLabel>
        <relationshipName>Activites_Soufflet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Identifiant_Assureur__c</fullName>
        <label>Identifiant Assureur</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limite_Credit_Autorisee__c</fullName>
        <label>Limite Crédit Autorisée</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mode_de_paiement_CD__c</fullName>
        <label>Mode de paiement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PaymentMethod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mode_de_paiement__c</fullName>
        <label>Mode de paiement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3</fullName>
                    <label>Amex</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <isActive>false</isActive>
                    <label>BOC (Circulant)</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>BOR</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>Carte Bleue</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>Chèque</label>
                </value>
                <value>
                    <fullName>J</fullName>
                    <label>Chèque continu</label>
                </value>
                <value>
                    <fullName>F</fullName>
                    <label>Crédit Documentaire</label>
                </value>
                <value>
                    <fullName>$</fullName>
                    <label>Encaissement Via Argent</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>Especes</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>LCR Acceptée</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <label>LCR Non Acceptéé</label>
                </value>
                <value>
                    <fullName>Lettre de crédit</fullName>
                    <isActive>false</isActive>
                    <label>Lettre de crédit</label>
                </value>
                <value>
                    <fullName>A</fullName>
                    <label>Prélévement Client</label>
                </value>
                <value>
                    <fullName>K</fullName>
                    <isActive>false</isActive>
                    <label>Quittance</label>
                </value>
                <value>
                    <fullName>Remise doc</fullName>
                    <isActive>false</isActive>
                    <label>Remise doc</label>
                </value>
                <value>
                    <fullName>U</fullName>
                    <label>Virement International</label>
                </value>
                <value>
                    <fullName>G</fullName>
                    <label>Virement ITG</label>
                </value>
                <value>
                    <fullName>V</fullName>
                    <label>Virement SEPA Euro</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Montant_Assurance_Credit__c</fullName>
        <inlineHelpText>Amount granted</inlineHelpText>
        <label>Montant Assurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nom_de_l_assureur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nom de l&apos;assureur</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activités Soufflet (Nom de l&apos;assureur)</relationshipLabel>
        <relationshipName>Assureur_activite</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsable_du_Commercial__c</fullName>
        <formula>Commercial__r.Manager.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Responsable du Commercial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statut_Activite__c</fullName>
        <label>Statut activité</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Perdu</fullName>
                </value>
                <value>
                    <fullName>A la concurrence</fullName>
                </value>
                <value>
                    <fullName>Insolvable</fullName>
                </value>
                <value>
                    <fullName>Fermé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_Activite_PeutEtreEnReconquette__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pour Qualifier une activité en Reconquête il faut un check si une Adresse Fact au moins Active ou Inactive, cette checkbox sera MAJ par les adresses;
Lorsqu&apos;une adresse attachée à cette activité est actif ou Inactif MAJ cette checkBox, lorsque tout les adresses sont autre que actif/Inactif alors le flow MAJ cette checkbox</description>
        <label>TECH_ActivitéPeutEtreEnReconquete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Associe_A__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Champs utilisé pour afficher une lookup vers compte dans la forme de création des quick actions Activité Indirecte et concurrente à partir du Compte</description>
        <label>Associée à</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please choose a different Account from the one of the Activity and an Account that is not an Account Site.</errorMessage>
            <filterItems>
                <field>$Source.Compte__c</field>
                <operation>notEqual</operation>
                <valueField>Account.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>Site</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activités Soufflet Associées</relationshipLabel>
        <relationshipName>Activites_Soufflet_Associees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tech_Force_Name_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>utilisé pour permettre au process builder ACTIV_PB_ChangementNomActivitéIndirecteOuConcurrente  de modifier le nom de l&apos;activité concurrente ou indirecte crée par Quick Action sur Compte</description>
        <label>Tech_Force_Name_Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_GC_Num_Intern_Data__c</fullName>
        <externalId>true</externalId>
        <label>Tech_GC_Num_Intern_Data</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tech_Type_d_Activite__c</fullName>
        <defaultValue>/* DIV_SOC_Actv_Fonc : Need to get the Actv */ 

MID($UserRole.DeveloperName, 
FIND(&quot;_&quot;, $UserRole.DeveloperName, FIND(&quot;_&quot;, $UserRole.DeveloperName, 0)+1)+1, 
FIND(&quot;_&quot;, $UserRole.DeveloperName, FIND(&quot;_&quot;, $UserRole.DeveloperName, FIND(&quot;_&quot;, $UserRole.DeveloperName, 0)+1)+1) - (FIND(&quot;_&quot;, $UserRole.DeveloperName, FIND(&quot;_&quot;, $UserRole.DeveloperName, 0)+1)+1))</defaultValue>
        <description>Champs utilisé pour les quick Action qui sont sur compte pour créer des activités indirectes et concurrentes</description>
        <label>Type d&apos;Activité</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Activite</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Activite__c</fullName>
        <label>Type d&apos;Activité</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commerciale</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Concurrent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>owned_by_me__c</fullName>
        <formula>$User.Id =  Commercial__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>owned by me</label>
        <type>Checkbox</type>
    </fields>
    <label>Activité Soufflet</label>
    <listViews>
        <fullName>Equipe_Etienne_Lery</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>Compte__c</columns>
        <columns>NAME</columns>
        <columns>Statut_Activite__c</columns>
        <columns>Type_Activite__c</columns>
        <columns>Cycle_de_qualification__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Commercial__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Commercial__c</field>
            <operation>equals</operation>
            <value>Alain Bello,Marc Pastor</value>
        </filters>
        <filters>
            <field>Commercial__c</field>
            <operation>equals</operation>
            <value>Ludivine Le Roux,Maruschka Salmon</value>
        </filters>
        <filters>
            <field>Commercial__c</field>
            <operation>equals</operation>
            <value>Nathalie Beaumont</value>
        </filters>
        <label>Les comptes de l&apos;équipe</label>
        <language>en_US</language>
        <sharedTo>
            <group>GC_Etienne_Lery</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Equipe_Julien_Brunet</fullName>
        <columns>Compte__c</columns>
        <columns>NAME</columns>
        <columns>Statut_Activite__c</columns>
        <columns>Type_Activite__c</columns>
        <columns>Cycle_de_qualification__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Commercial__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Commercial__c</field>
            <operation>equals</operation>
            <value>Sandrine Elias,Etienne Lery</value>
        </filters>
        <label>Les comptes de l&apos;équipe</label>
        <language>en_US</language>
        <sharedTo>
            <group>GC_Julien_Brunet</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GC_All_Activities</fullName>
        <columns>Compte__c</columns>
        <columns>NAME</columns>
        <columns>Statut_Activite__c</columns>
        <columns>Tech_Type_d_Activite__c</columns>
        <columns>Type_Activite__c</columns>
        <columns>Cycle_de_qualification__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Commercial__c</columns>
        <filterScope>Everything</filterScope>
        <label>Toutes les activités</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Mon_Portefeuille_Client</fullName>
        <columns>Compte__c</columns>
        <columns>NAME</columns>
        <columns>Statut_Activite__c</columns>
        <columns>Type_Activite__c</columns>
        <columns>Cycle_de_qualification__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Commercial__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>owned_by_me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Mon Portefeuille Client</label>
    </listViews>
    <nameField>
        <label>Nom de l&apos;Activité</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activités Soufflet</pluralLabel>
    <recordTypes>
        <fullName>Activite_Soufflet</fullName>
        <active>true</active>
        <label>Activité Soufflet</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACTIV_VR01_InterditDeModifierLeNomEtComp</fullName>
        <active>true</active>
        <description>Une fois crée on ne peut pas modifier le nom ou le compte de l’activité</description>
        <errorConditionFormula>/*Bypass*/
!$Setup.CS01_Bypass__c.Bypass_ValidationRule__c
&amp;&amp;
IF(ISBLANK($Setup.CS01_Bypass__c.Bypass_VRbyVR__c),TRUE,
!CONTAINS($Setup.CS01_Bypass__c.Bypass_VRbyVR__c,&apos;ACTIV_VR01&apos;))
&amp;&amp;
IF(ISBLANK($Setup.CS01_Bypass__c.Bypass_VRbyObject__c),TRUE,
!CONTAINS($Setup.CS01_Bypass__c.Bypass_VRbyObject__c,&apos;Activite_Soufflet__c&apos;))

/*Business Rule*/
&amp;&amp;
OR(ISCHANGED( Name ), ISCHANGED ( Compte__c ))
&amp;&amp;
Tech_Force_Name_Change__c = False</errorConditionFormula>
        <errorMessage>ACTIV_VR01 - Une fois crée vous ne pouvez pas modifier le nom ou le compte de l’activité. Le nom de l&apos;activité est déduit de la Division et de la Société du commercial ainsi que du type d&apos;activité lors de la création.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACTIV_VR02_QualifReqtSiAdresseActiveInac</fullName>
        <active>true</active>
        <description>Pour Qualifier une activité en Reconquête il faut faire un check si il y a une Adresse Facturée au moins Active ou Inactive</description>
        <errorConditionFormula>/*Bypass*/
!$Setup.CS01_Bypass__c.Bypass_ValidationRule__c
&amp;&amp;
IF(ISBLANK($Setup.CS01_Bypass__c.Bypass_VRbyVR__c),TRUE,
!CONTAINS($Setup.CS01_Bypass__c.Bypass_VRbyVR__c,&apos;ACTIV_VR02&apos;))
&amp;&amp;
IF(ISBLANK($Setup.CS01_Bypass__c.Bypass_VRbyObject__c),TRUE,
!CONTAINS($Setup.CS01_Bypass__c.Bypass_VRbyObject__c,&apos;Activite_Soufflet__c&apos;))

/*Business Rule*/
&amp;&amp;
ISCHANGED( Cycle_de_qualification__c )
&amp;&amp;
ISPICKVAL(Cycle_de_qualification__c , &quot;65&quot;)
&amp;&amp;
TECH_Activite_PeutEtreEnReconquette__c = FALSE</errorConditionFormula>
        <errorDisplayField>Cycle_de_qualification__c</errorDisplayField>
        <errorMessage>ACTIV_VR02 - Pour Qualifier une activité en Reconquête il faut avoir au moins une Adresse de facturation Active ou Inactive</errorMessage>
    </validationRules>
</CustomObject>